--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -20,4 +20,7 @@
 
     <style name="AppTheme.TransparencyActionBar.DarkActionBar" parent="AppTheme.TransparencyActionBar" />
 
+    <style name="AppTheme.UserSpaceActivity" parent="AppTheme">
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
 </resources>
