--- a/app/src/main/res/layout/layout_web_view.xml
+++ b/app/src/main/res/layout/layout_web_view.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data />
-
     <RelativeLayout
+        android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -16,7 +15,7 @@
             android:id="@+id/pb"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
+            android:layout_height="2dp"
             android:indeterminate="false"
             android:max="100"
             android:visibility="invisible" />
