--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,4 +16,6 @@
     <color name="lighterGray">@color/lightestBackground</color>
     <color name="lightGray">@color/lighterBackground</color>
     <color name="tagBackground">@color/lightBackground</color>
+
+    <color name="actionBarHalfTransparent">#CC222222</color>
 </resources>
