--- a/app/src/main/res/layout/activity_child_reply.xml
+++ b/app/src/main/res/layout/activity_child_reply.xml
@@ -128,10 +128,7 @@
                     android:textColor="@color/accentText" />
             </LinearLayout>
 
-            <com.jcodecraeer.xrecyclerview.XRecyclerView
-                android:id="@+id/xrv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+            <include layout="@layout/layout_srl" />
         </LinearLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
