--- a/app/src/main/res/layout/fragment_settings_users.xml
+++ b/app/src/main/res/layout/fragment_settings_users.xml
@@ -79,8 +79,8 @@
 
         </RelativeLayout>
 
-        <com.jcodecraeer.xrecyclerview.XRecyclerView
-            android:id="@+id/xrv"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
